--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,67 @@ code {
 		monospace;
 }
 
+.root {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.app-container {
+	width: 90vw;
+	border: 1px solid black;
+}
+* {
+	box-sizing: border-box;
+}
+.select-container {
+	border: 1px solid black;
+	display: flex;
+	flex-direction: column;
+	margin-top: 40px;
+}
+
+select {
+	width: 100%;
+	height: 50px;
+	font-size: 18px;
+	margin-bottom: 10px;
+}
+
+button,
+.start-button {
+	height: 50px;
+	width: 100%;
+}
+
+h1 {
+	font-size: 45px;
+}
+
+h2 {
+	font-size: 20px;
+}
+
 .correctAnswerButton {
 	background-color: green;
 }
 
 .question-card {
 	border: 1px solid black;
+	display: flex;
+	flex-direction: column;
+}
+
+.question-unanswered,
+.question-answered {
+	font-size: 25px;
+}
+
+.question-answered {
+	color: gray;
+}
+
+.question {
+	display: flex;
+	flex-direction: column;
 }
