--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,16 @@ button,
 	width: 100%;
 }
 
+.button-wrong {
+	background: red;
+	color: white;
+}
+
+.button-correct {
+	background: green;
+	color: white;
+}
+
 h1 {
 	font-size: 45px;
 }
@@ -83,4 +93,22 @@ h2 {
 .question {
 	display: flex;
 	flex-direction: column;
+}
+
+.loader {
+	border: 16px solid #f3f3f3; /* Light grey */
+	border-top: 16px solid #970f6e; /* Blue */
+	border-radius: 50%;
+	width: 120px;
+	height: 120px;
+	animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
 }
