--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+	font-family: "Mulish", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
 		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
@@ -18,12 +18,56 @@ code {
 	justify-content: center;
 }
 
+.root {
+	background: linear-gradient(229deg, #68063d, #4b1a2b, #4a3655, #4144a2);
+	background-size: 800% 800%;
+	-moz-animation: AnimationName 10s ease infinite;
+	animation: AnimationName 10s ease infinite;
+}
+
+@-webkit-keyframes AnimationName {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+@-moz-keyframes AnimationName {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+@keyframes AnimationName {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
 .app-container {
-	width: 90vw;
-	border: 1px solid black;
-	height: 99vh;
+	color: white;
+	/* border: 1px solid black; */
+	height: 100vh;
 	display: flex;
 	flex-direction: column;
+	min-width: 275px;
+	/* width: 100vw; */
+	padding: 20px;
+	max-width: 460px;
 }
 * {
 	box-sizing: border-box;
@@ -32,9 +76,9 @@ code {
 .questions-wrapper {
 	display: flex;
 	flex-direction: column;
+	color: white;
 }
 .select-container {
-	border: 1px solid black;
 	display: flex;
 	flex-direction: column;
 	margin-top: 40px;
@@ -45,22 +89,53 @@ select {
 	height: 50px;
 	font-size: 18px;
 	margin-bottom: 10px;
+	background: transparent;
+	color: white;
+	border: 1px solid white;
+	font-family: "Mulish", sans-serif;
 }
 
+select:focus {
+	outline: none;
+}
+option {
+	color: black;
+	font-size: 14px;
+}
 button,
 .start-button {
 	height: 50px;
 	width: 100%;
+	margin: 9px 0;
+	background: transparent;
+	border: 1px solid white;
+	color: white;
+	font-size: 16px;
+	font-weight: 800;
+	font-family: "Mulish", sans-serif;
+}
+
+button:focus {
+	outline: none;
+}
+
+button:hover {
+	background: rgb(255 255 255 / 16%);
 }
 
 .button-wrong {
-	background: red;
+	background-color: #a55050;
 	color: white;
 }
 
 .button-correct {
-	background: green;
+	background: #0b7e73;
 	color: white;
+}
+
+.should-have-clicked-this-button {
+	background: rgb(11 101 93);
+	color: black;
 }
 
 h1 {
@@ -76,18 +151,16 @@ h2 {
 }
 
 .question-card {
-	border: 1px solid black;
 	display: flex;
 	flex-direction: column;
+	margin-top: 100px;
 }
 
 .question-unanswered,
 .question-answered {
-	font-size: 25px;
-}
-
-.question-answered {
-	color: gray;
+	font-size: 23px;
+	color: white;
+	margin-bottom: 48px;
 }
 
 .question {
@@ -104,6 +177,10 @@ h2 {
 	animation: spin 1s linear infinite;
 }
 
+.results {
+	margin-top: 40px;
+}
+
 @keyframes spin {
 	0% {
 		transform: rotate(0deg);
@@ -111,4 +188,71 @@ h2 {
 	100% {
 		transform: rotate(360deg);
 	}
+}
+
+.next-question {
+}
+
+.button-wrong {
+	/* Start the shake animation and make the animation last for 0.5 seconds */
+	animation: shake 0.2s;
+
+	/* When the animation is finished, start again */
+	animation-iteration-count: 1;
+}
+
+@keyframes shake {
+	0% {
+		transform: translate(1px, 1px) rotate(0deg);
+	}
+	10% {
+		transform: translate(-1px, -2px) rotate(-1deg);
+	}
+	20% {
+		transform: translate(-3px, 0px) rotate(1deg);
+	}
+	30% {
+		transform: translate(3px, 2px) rotate(0deg);
+	}
+	40% {
+		transform: translate(1px, -1px) rotate(1deg);
+	}
+	50% {
+		transform: translate(-1px, 2px) rotate(-1deg);
+	}
+	60% {
+		transform: translate(-3px, 1px) rotate(0deg);
+	}
+	70% {
+		transform: translate(3px, 1px) rotate(-1deg);
+	}
+	80% {
+		transform: translate(-1px, -1px) rotate(1deg);
+	}
+	90% {
+		transform: translate(1px, 2px) rotate(0deg);
+	}
+	100% {
+		transform: translate(1px, -2px) rotate(-1deg);
+	}
+}
+
+.result-screen {
+	margin-top: 40px;
+}
+
+.new-game-button {
+	margin-top: 20px;
+}
+
+.game-container {
+	display: flex;
+	/* align-items: center; */
+	justify-content: center;
+}
+
+.loader-container {
+	height: 100vh;
+	display: flex;
+	align-items: center;
 }
